--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,8 @@ babel==2.16.0
 beautifulsoup4==4.12.3
 bleach==6.2.0
 blinker==1.9.0
+boto3==1.36.11
+botocore==1.36.11
 cachetools==5.5.1
 certifi==2024.12.14
 cffi==1.17.1
@@ -45,6 +47,7 @@ isoduration==20.11.0
 jedi==0.19.2
 Jinja2==3.1.5
 jiter==0.8.2
+jmespath==1.0.1
 json5==0.10.0
 jsonpatch==1.33
 jsonpointer==3.0.0
@@ -63,6 +66,7 @@ jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.13
 langchain==0.3.15
+langchain-aws==0.2.12
 langchain-community==0.3.15
 langchain-core==0.3.31
 langchain-ollama==0.2.2
@@ -128,6 +132,7 @@ rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.9.4
 rpds-py==0.22.3
+s3transfer==0.11.2
 Send2Trash==1.8.3
 setuptools==75.8.0
 six==1.17.0
